# codeeval

./: CMakeLists.txt  FileReadTemplate.java  LICENSE
bash/hard/: challenge_157.sh
cpp/: CMakeLists.txt
cpp/easy/: challenge_01.cpp  challenge_03.cpp  challenge_04.cpp  challenge_08.cpp  challenge_20.cpp  challenge_21.cpp  challenge_23.cpp
cpp/hard/: challenge_157.cpp  challenge_239.cpp
cpp/moderate/: challenge_12.cpp  challenge_16.cpp
easy/challenge_01/: Main.java
easy/challenge_03/: Main.java  challenge_03.sh  main.cpp
easy/challenge_04/: Main.java  main.cpp
easy/challenge_08/: Main.java  main.cpp
easy/challenge_18/: Main.java  challenge_18.sh
easy/challenge_19/: Main.java  challenge_19.sh  main.cpp
easy/challenge_20/: Main.java
easy/challenge_205/: Main.java
easy/challenge_21/: Main.java
easy/challenge_22/: Main.java  main.cpp
easy/challenge_25/: Main.java  main.cpp
easy/challenge_39/: Main.java  main.cpp
easy/magic_square/: MagicSquare.java
hard/challenge_52/: Main.java  challenge_52.file
input/moderate/: challenge_158.file
java/easy/: Challenge01.java  Challenge03.java  Challenge04.java  Challenge08.java  Challenge19.java  Challenge205.java  Challenge21.java  Challenge22.java  Challenge93.java
java/hard/: Challenge157.java  Challenge239.java  Challenge52.java
java/moderate/: Challenge12.java  Challenge15.java  Challenge16.java  Challenge46.java  Challenge89.java
moderate/challenge_15/: Main.java
moderate/challenge_158/: Main.java
moderate/challenge_16/: Main.java
moderate/challenge_27/: Main.java
(+1 files in other folders)
